# sfml-vscode-setup

./: CMakeLists.txt  README.md
windows/: tasks.json
